<resources>
    <string name="app_name">오늘의집</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="begin_text_signup_1">지금 가입하면 최대 10만원</string>
    <string name="begin_text_signup_2">쿠폰 증정!</string>
    <string name="btn_signin_kakao">카카오톡으로 계속하기</string>
    <string name="btn_signin_apple">Apple로 계속하기</string>
    <string name="login_email"><u>이메일로 로그인</u></string>
    <string name="signup_email"><u>이메일로 가입</u></string>
    <string name="lookaround">둘러보기</string>
    <string name="ask_wrong_signin">로그인에 문제가 있으신가요?</string>
</resources>